--- a/acote/Info.plist
+++ b/acote/Info.plist
@@ -57,6 +57,8 @@
 	<string></string>
 	<key>NSCameraUsageDescription</key>
 	<string>&quot;処方箋を追加するにはカメラへのアクセス許可が必要です。&quot;</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>&quot;住所の取得には位置情報取得の許可が必要です。&quot;</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
